Updated to grails 1.3.5 and configured embedded Tomcat with more memory.